[tool.poetry]
name = "bill_analysis"
version = "0.1.0"
description = "个人账单管理"
authors = ["zhangxin"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

